fix top block behind solar system

--- a/assets/modules/TopMenu.scss
+++ b/assets/modules/TopMenu.scss
@@ -27,5 +27,5 @@
   top: 25px;
   left: 50%;
   transform: translateX(-50%);
-
+  z-index:1;
 }
